--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar class="toolbar-title">
   <span>Star Wars Characters</span>
 </mat-toolbar>
 <router-outlet></router-outlet>
