--- a/src/app/star-characters/characters-list-table/characters-list-table.component.html
+++ b/src/app/star-characters/characters-list-table/characters-list-table.component.html
@@ -1,24 +1,51 @@
-<div class="mat-elevation-z8">
-    <table mat-table [dataSource]="charactersList" class="mat-elevation-z8">
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
+@if (loading) {
+<div class="spinner-container">
+    <mat-spinner></mat-spinner>
+</div>
+}
+<div>
+    <mat-form-field>
+        <input matInput [formControl]="searchControl" placeholder="Search">
+    </mat-form-field>
+    <button mat-raised-button (click)="applyFilter()">Apply</button>
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="charactersList" class="mat-elevation-z8">
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
 
-        <!-- Birth Year Column -->
-        <ng-container matColumnDef="birthYear">
-            <th mat-header-cell *matHeaderCellDef> Birth Year </th>
-            <td mat-cell *matCellDef="let element"> {{element.birth_year}} </td>
-        </ng-container>
+            <!-- Birth Year Column -->
+            <ng-container matColumnDef="birthYear">
+                <th mat-header-cell *matHeaderCellDef> Birth Year </th>
+                <td mat-cell *matCellDef="let element"> {{element.birth_year}} </td>
+            </ng-container>
 
-        <!-- gender Column -->
-        <ng-container matColumnDef="gender">
-            <th mat-header-cell *matHeaderCellDef> Gender </th>
-            <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
-        </ng-container>
+            <!-- gender Column -->
+            <ng-container matColumnDef="gender">
+                <th mat-header-cell *matHeaderCellDef> Gender </th>
+                <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+            <!-- action Column -->
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef> Action </th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button (click)="viewCharacterDetails(element.id)">
+                        <mat-icon>visibility</mat-icon>
+                    </button>
+                    <mat-icon [ngClass]="{'favorite': isFavorite(element.id), 'not-favorite': !isFavorite(element.id)}"
+                        (click)="toggleFavorite(element.id)">
+                        star
+                    </mat-icon>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+    <mat-paginator [length]="characterListLength" [pageSize]="10" [pageSizeOptions]="[10]" (page)="pageData($event)">
+    </mat-paginator>
 </div>
